# Attention-Is-All-You-Need

./: README.md  pyproject.toml
example/: example_usage.py
src/transformer/: LayerNorm.py  __init__.py  builder.py  decoder.py  decoder_block.py  encoder.py  encoder_block.py  feed_forward.py  inputEmb.py  multi_head_attention.py  positionalEnco.py  projection_layer.py  residual_connection.py  transformer.py
