[project]
name = "transformer"
version = "0.1.0"
description = "I have recreate the transformer architecture from scratch using pyTorch and with Attention is all you need paper."
readme = "README.md"
authors = [
    { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
